--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 				dataType: "xml",
 				contentType: "text/xml",
 				data: postData,
-				//TODO: Error handling
+				//TODO: EError handling
 				success: function(xml) {	
 					//TODO: User feedback
 				}
